--- a/next-gen-front-end/package.json
+++ b/next-gen-front-end/package.json
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
     "recharts": "^3.4.1",
